--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+<title> Liam's Webpage</title>
+<link rel=stylesheet href="style.css">
+</head>
+  <body bgcolor=#FF33C7>
+  
+</html>
